Lam thay doi phan thanh toan, hoa don

--- a/Source Code/KTXSV/Views/Home/Index.cshtml
+++ b/Source Code/KTXSV/Views/Home/Index.cshtml
@@ -25,7 +25,7 @@
 
     <h1 class="m-5 text-center fw-bold"
         style="color: #EE6823; font-size:50px; text-shadow: 2px 4px 6px rgba(0,0,0,0.3);">
-        WELCOME TO HUFLIT DORMITORY
+        WELCOME TO HUFLIT88.COM
     </h1>
 
         <div id="dormitoryCarousel" class="carousel slide container" data-bs-ride="carousel" data-bs-interval="4000">
