Save current changes before pull

--- a/Source Code/KTXSV/Views/Shared/_Layout.cshtml
+++ b/Source Code/KTXSV/Views/Shared/_Layout.cshtml
@@ -44,14 +44,14 @@
                                 <li><a class="dropdown-item" href="/SinhVien/ThongTinCaNhan">Thông tin cá nhân</a></li>
                                 <li><a class="dropdown-item" href="/SinhVien/ChinhSuaThongTin">Chỉnh sửa thông tin</a></li>
                                 <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item text-danger" href="/TaiKhoan/DangXuat">Đăng xuất</a></li>
+                                <li><a class="dropdown-item text-danger" href="/Account/Logout">Đăng xuất</a></li>
                             </ul>
                         </li>
                     }
                     else
                     {
                         <li class="nav-item">
-                            <a href="/TaiKhoan/DangNhap" class="btn btn-dark ms-2 m-o" style="border-radius: 20px; font-size: 20px">Đăng nhập</a>
+                            <a href="/Account/Index" class="btn btn-dark ms-2 m-o" style="border-radius: 20px; font-size: 20px">Đăng nhập</a>
                         </li>
                     }
                 </ul>
