--- a/Source Code/KTXSV/Views/Account/LoginAdmin.cshtml
+++ b/Source Code/KTXSV/Views/Account/LoginAdmin.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
+    Layout = null;
     ViewBag.Title = "Đăng Nhập Với Tư Cách Là Admin";
-    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 
