--- a/Source Code/KTXSV/Views/Shared/_Layout.cshtml
+++ b/Source Code/KTXSV/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
                     <li class="nav-item"><a class="nav-link text-dark" href="/Phong/DanhSachPhong">Phòng đã đăng ký</a></li>
                     <li class="nav-item"><a class="nav-link text-dark" href="/ThanhToan/HoaDon">Thanh toán</a></li>
                     <li class="nav-item"><a class="nav-link text-dark" href="/ThongBao/ThongBao">Thông báo</a></li>
-                    <li class="nav-item"><a class="nav-link text-dark" href="/HoTro/LichSu">Hỗ trợ</a></li>
+                    <li class="nav-item"><a class="nav-link text-dark" href="/SupportRequests/Index">Hỗ trợ</a></li>
 
                     @if (Session["UserID"] != null)
                     {
@@ -44,7 +44,7 @@
                                 <li><a class="dropdown-item" href="/SinhVien/ThongTinCaNhan">Thông tin cá nhân</a></li>
                                 <li><a class="dropdown-item" href="/SinhVien/ChinhSuaThongTin">Chỉnh sửa thông tin</a></li>
                                 <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item text-danger" href="/Account/Logout">Đăng xuất</a></li>
+                                <li><a class="dropdown-item text-danger" href="/Account/Index">Đăng xuất</a></li>
                             </ul>
                         </li>
                     }
