--- a/Source Code/KTXSV/Views/Account/LoginStudent.cshtml
+++ b/Source Code/KTXSV/Views/Account/LoginStudent.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
+    Layout = null;
     ViewBag.Title = "Đăng Nhập Với Tư Cách Là Sinh Viên";
-    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <!DOCTYPE html>
@@ -34,7 +34,7 @@
             .login-container h2 {
                 margin-bottom: 20px;
                 color: #007bff;
-                font-weight: 600;
+                font-weight: 500;
             }
 
             .login-container input[type="text"],
