--- a/Source Code/KTXSV/Views/Shared/_AdminLayout.cshtml
+++ b/Source Code/KTXSV/Views/Shared/_AdminLayout.cshtml
@@ -98,7 +98,7 @@
                     <a class="nav-link" href="/Admin/PendingRegistrations">Phê duyệt đăng ký</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/Admin/Students">Quản lý sinh viên</a>
+                    <a class="nav-link" href="/ManageStudents/Index">Quản lý sinh viên</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/Admin/Rooms">Quản lý phòng</a>
@@ -126,6 +126,12 @@
         <hr />
         <p>&copy; @DateTime.Now.Year - HUFLIT Dormitory Management System</p>
     </footer>
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+    <!-- jquery-confirm -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.4/jquery-confirm.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.4/jquery-confirm.min.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
